First fix stylesheet in alignment with desired outcome

--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -7,21 +7,38 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  
 }
 
 .title {
   background: #e3f4ff;
+  display: inline-block;
+  box-sizing: content-box;
+  margin: 30px 10px 8px;
+  padding: 8px;
+  width: 364px;
 }
 
 .content {
   background: #e3f4ff;
+  margin: 16px 8px;
+  padding: 8px;
 }
 
 .button-container {
   background: #e3f4ff;
+  display: inline-block;
+  margin: 8px;
+  padding: 8px;
+  width:368px;
+  text-align: center;
+  box-sizing: content-box;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  margin: auto;
+  padding: 8px 24px;
 }
